
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- NOVO COMANDO! `/inventario`
- NOVO SISTEMA! **ITEMS MÁGICOS***
- Usuários banidos não podem ser mamados

### Changed

- O modo que o ship é calculado foi alterado
- O comando de caçar calcula as caças em porcentagens agora! Use `/cacar tipo:probabilities` para mais informações
- O preço das caças foi alterado! Demônio 600 -> 120, Gigante 1900 -> 1500, Anjo 3200 -> 2600, Arcanjo 5900 -> 2300, Semideus 8000 -> 6000, Deus 19000 -> 25000.
- O preço do roll foi alterado! 7000 -> 15000
- O preço das cores foi ajustado! Roxo 50000 -> 30000, Vermelho 100000 -> 40000, Ciano 150000 -> 50000, Verde 300000 -> 60000, Rosa 500000 -> 70000, Amarelo 40000 -> 80000, Sua Escolha 700000 -> 100000
- Mudanças internas: Reduzido a quantidade de queries para o banco de dados -> Isso deve reduzir drasticamente o tempo de resposta de comandos. Reduzido a quantidade de clientes instnaciados -> Isso deve reduzir a memoria usada!

### Deprecated

- Fields do banco de dados: `mamadas`, `casado`,`nota`,`data`, `cor`, `cores`, `caçados`, `anjos`, `arcanjos`, `semideuses`, `deuses`, `caçarTime`, `votos`. Estes foram mudados para nomes em inglẽs

### Fixed

- O blackjack responde caso tu não clique em nenhum botão
- Os A'ses do Blackjack funcionam corretamente, permitindo acontecer Blackjacks, e a contagem correta das cartas quando há mais de um As na mão

### Removed

- O campo shipValue foi removido do banco de dados!

## [3.3.13-hall] 2021-10-23

### Added

- Nova função pra criar mensagens no `IteractionCommandContext` junto de uma função pra criar a response bonintinha

### Changed

- O receptor deve clicar num botão para aceitar o presente do `/give`
- O código do `/give` foi reescrito