@@ -29,7 +29,7 @@ export default class ReadyEvent {
       HttpServer.getInstance().registerRouter('DBL', DBLWebhook(client));
       // HttpServer.getInstance().registerRouter('INTERACTIONS', PostInteractions(this.client));
 
-      ReadyEvent.verifyInactive(client);
+      // ReadyEvent.verifyInactive(client); ONLY START IN DEZEMBER
 
       const allBannedUsers = await client.repositories.userRepository.getAllBannedUsersId();
       await client.repositories.blacklistRepository.addBannedUsers(allBannedUsers);
@@ -88,17 +88,17 @@ export default class ReadyEvent {
   static async verifyInactive(client: MenheraClient): Promise<void> {
     clearTimeout(inactiveTimeout);
     inactiveTimeout = setTimeout(async () => {
-      /*   const inactiveUsers = await client.database.Users.find(
+      const inactiveUsers = await client.database.Users.find(
         {
-          lastCommandAt: { $lte: Date.now() - 604800000 },
+          lastCommandAt: { $lte: Date.now() - 1_209_600_000 },
           $or: [
-            { estrelinhas: { $gte: 250000 } },
+            { estrelinhas: { $gte: 250_000 } },
             { demons: { $gte: 60 } },
             { giants: { $gte: 50 } },
             { angels: { $gte: 40 } },
             { archangels: { $gte: 30 } },
             { demigods: { $gte: 20 } },
-            { gods: { $gte: 5 } },
+            { gods: { $gte: 7 } },
           ],
         },
         [
@@ -114,11 +114,66 @@ export default class ReadyEvent {
         ],
       );
 
-        const ids = inactiveUsers.map((a) => a.id);
+      const ids = inactiveUsers.map((a) => a.id);
 
       const updatedData = inactiveUsers.map((a) => {
+        const weeks = parseFloat((Date.now() - a.lastCommandAt / 1_209_600_000).toFixed(1));
 
-      }); */
+        let estrelinhas =
+          (Math.floor(a.estrelinhas / 250_000) >= 4
+            ? Math.floor((a.estrelinhas / 4) * weeks)
+            : Math.floor(a.estrelinhas / 8) * weeks) * -1;
+        let demons =
+          (Math.floor(a.demons / 60) >= 4
+            ? Math.floor((a.demons / 4) * weeks)
+            : Math.floor(a.demons / 8) * weeks) * -1;
+        let giants =
+          (Math.floor(a.giants / 50) >= 4
+            ? Math.floor((a.giants / 4) * weeks)
+            : Math.floor(a.giants / 8) * weeks) * -1;
+        let angels =
+          (Math.floor(a.angels / 40) >= 4
+            ? Math.floor((a.angels / 4) * weeks)
+            : Math.floor(a.angels / 8) * weeks) * -1;
+        let archangels =
+          (Math.floor(a.archangels / 10) >= 4
+            ? Math.floor((a.archangels / 4) * weeks)
+            : Math.floor(a.archangels / 8) * weeks) * -1;
+        let demigods =
+          (Math.floor(a.demigods / 5) >= 4
+            ? Math.floor((a.demigods / 4) * weeks)
+            : Math.floor(a.demigods / 8) * weeks) * -1;
+        let gods =
+          (Math.floor(a.gods / 2) >= 4
+            ? Math.floor((a.gods / 4) * weeks)
+            : Math.floor(a.gods / 8) * weeks) * -1;
+
+        if (a.estrelinhas - estrelinhas < 0) estrelinhas = 0;
+        if (a.demons - demons < 0) demons = 0;
+        if (a.giants - giants < 0) giants = 0;
+        if (a.angels - angels < 0) angels = 0;
+        if (a.archangels - archangels < 0) archangels = 0;
+        if (a.demigods - demigods < 0) demigods = 0;
+        if (a.gods - gods < 0) gods = 0;
+
+        return { $inc: { estrelinhas, demons, giants, angels, archangels, demigods, gods } };
+      });
+      const bulkUpdate = client.database.Users.collection.initializeUnorderedBulkOp();
+
+      ids.forEach((id, index) => {
+        bulkUpdate.find({ id }).updateOne(updatedData[index]);
+      });
+
+      const startTime = Date.now();
+      const result = await bulkUpdate.execute();
+      if (result)
+        console.log(
+          `[DATABASE BULK] - Inactive users executed in ${Date.now() - startTime}ms: `,
+          result,
+        );
+      else console.log('[DATABASE BULK] - Error when bulking');
+
+      this.verifyInactive(client);
     }, getMillisecondsToTheEndOfDay());
   }
 }
